--- a/google/ios.plist
+++ b/google/ios.plist
@@ -3,9 +3,9 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>38334927645-mhesddbm49e24ctibik61lcevd28ttmh.apps.googleusercontent.com</string>
+	<string></string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.38334927645-mhesddbm49e24ctibik61lcevd28ttmh</string>
+	<string></string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
